move testing scripts to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+inference_testing/
+
 renew.sh
 tmux_renew.sh
 
@@ -146,3 +148,4 @@ runs2
 runs/flexible_self_docking/predictions_RDKitFalse.pt
 runs/flexible_self_docking/predictions_RDKitTrue.pt
 .bash_history
+
